<resources>
    <string name="app_name">MyRuns</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="class_year">Class</string>
    <string name="major">Major</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change_picture">Change</string>
    <string name="input_prompt">Choose an input</string>
    <string name="activity_prompt">Choose an activity</string>
    <string name="mEntryCancel">Cancel</string>
    <string name="mEntrySave">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
